// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spans endSpan should call fetch with correct parameters to update the span 1`] = `
{
  "end_time": 2020-04-01T00:00:00.000Z,
  "name": "test-span",
  "parent_uuid": undefined,
  "start_time": 2020-04-01T00:00:00.000Z,
  "uuid": "span-uuid",
}
`;

exports[`Spans span with child span Should create a parent and child span 1`] = `
{
  "end_time": 2020-04-01T00:00:00.000Z,
  "input": "child input",
  "name": "child-span",
  "output": "child output",
  "parent_uuid": "parent-uuid",
  "project": "missing_project",
  "start_time": 2020-04-01T00:00:00.000Z,
  "uuid": "return-a-uuid",
}
`;

exports[`Spans span with child span Should create a parent and child span 2`] = `
{
  "end_time": 2020-04-01T00:00:00.000Z,
  "input": "parent input",
  "name": "parent-span",
  "output": "parent output",
  "parent_uuid": undefined,
  "project": "missing_project",
  "start_time": 2020-04-01T00:00:00.000Z,
  "uuid": "return-a-uuid",
}
`;

exports[`Spans startSpan should call fetch with correct parameters and resolve with the current span 1`] = `
{
  "input": "",
  "name": "test-span",
  "project": "missing_project",
  "start_time": 2020-04-01T00:00:00.000Z,
  "uuid": "span-uuid",
}
`;
